# base-api-service

./: README.md
app/controllers/: item_controller.py
base-api-service/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
base-api-service/app/: auth.py  database.py  main.py
base-api-service/app/controllers/: balance_sheet_controller.py  sample_db_controller.py  user_controller.py
base-api-service/app/models/: balance_sheet.py  sample_db.py  user_db.py
base-api-service/app/models/pydantic_models/: balance_sheet_pydantic.py  sample_db_pydantic.py  user_pydantic.py
base-api-service/app/services/: balance_sheet_service.py  sample_db_service.py  user_manager_service.py  user_service.py
