[tool.poetry]
name = "base-api-service"
version = "0.1.0"
description = ""
authors = ["ridaraufdeen <rida@altislabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.1.0.post1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
